# mulberry

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md  makefile
lib/AST/: ASTDumper.cpp  CMakeLists.txt
lib/Basic/: CMakeLists.txt  IntegerLiteral.cpp  Types.cpp
lib/Driver/: CMakeLists.txt  Compilation.cpp
lib/LLVMGen/: CMakeLists.txt  LLVMGen.cpp  TypeConverter.cpp
lib/MLIRGen/: CMakeLists.txt  MLIRGen.cpp  TypeConverter.cpp
lib/MLIRGen/Conversion/: CherryNNToLinalgPatterns.cpp  CherryNNToLinalgPatterns.h  ConvertCherryNNToLinalg.cpp  ConvertCherryToArithCfFunc.cpp  ConvertCherryToLLVM.cpp  ConvertCherryToSCF.cpp  ConvertMulberryRecordToCIR.cpp  ConvertMulberryToLLVM.cpp  LowerCherryBridgeCasts.cpp  LowerCherryRuntime.cpp  LowerMulberry.cpp  LowerMulberryList.cpp  LowerMulberryTensor.cpp  LowerResultTry.cpp  PrepareMulberryBoundaries.cpp
lib/MLIRGen/IR/: CherryDialect.cpp  CherryNNDialect.cpp  CherryNNOps.cpp  CherryOps.cpp  MulberryDialect.cpp  MulberryOps.cpp  MulberryTypes.cpp
lib/Parse/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
lib/Runtime/: BigInt.cpp  BoehmGC.cpp  CMakeLists.txt  Core.cpp  File.cpp  Print.cpp  Safetensors.cpp
lib/Sema/: CMakeLists.txt  Sema.cpp  Symbols.h
mulberry-opt/: CMakeLists.txt  mulberry-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  cherry-capi-test.c  mulberry-capi-test.c
test/cherry/Builtins/: boolToUInt64.cherry  operators.cherry  print.cherry
test/cherry/CherryTools/: cherry-cast-errors.mlir  cherry-nn-tensor-handle-consume-errors.mlir  cherry-opt.mlir  lower-mulberry-cherry-nn.mlir  lower-mulberry-empty.mlir  lower-mulberry-fail-fast.mlir  lower-mulberry-function-boundary.mlir  lower-mulberry-heap-alloc.mlir  lower-mulberry-list-boundary-fail-fast.mlir  lower-mulberry-list-desc-abi-lowering.mlir  lower-mulberry-list-desc-arg-lowering.mlir  lower-mulberry-list-desc-fail-fast.mlir  lower-mulberry-list-desc-lowering.mlir  lower-mulberry-list-desc-projection-lowering.mlir  lower-mulberry-list-desc-tensor-abi-fail-fast.mlir  lower-mulberry-list-desc-tensor-desc-abi-lowering.mlir  lower-mulberry-list-desc-tensor-desc-arg-lowering.mlir  lower-mulberry-list-desc-tensor-desc-return-fail-fast.mlir  lower-mulberry-list-desc-tensor-desc-unpack-fail-fast.mlir  lower-mulberry-list-desc-tensor-desc-unpack-lowering.mlir  lower-mulberry-list-escape-storage-fail-fast.mlir  lower-mulberry-list-escape-storage-lowering.mlir  lower-mulberry-list-signature-fail-fast.mlir  lower-mulberry-list-storage-fail-fast.mlir  lower-mulberry-list-storage-lowering.mlir  lower-mulberry-list-tensor-boundary-fail-fast.mlir  lower-mulberry-list-tensor-desc-escape-storage-lowering.mlir  lower-mulberry-list-tensor-desc-storage-lowering.mlir  lower-mulberry-list-tensor-storage-fail-fast.mlir  lower-mulberry-list-tensor-storage-lowering.mlir  lower-mulberry-list-to-desc-arg-lowering.mlir  lower-mulberry-nested-list-storage-fail-fast.mlir  lower-mulberry-nn-package.mlir  lower-mulberry-record-field-fail-fast.mlir  lower-mulberry-record-storage.mlir  lower-mulberry-scalar-storage.mlir  lower-mulberry-tensor-desc-abi-lowering.mlir  lower-mulberry-tensor-desc-boundary-fail-fast.mlir  lower-mulberry-tensor-desc-unpack-fail-fast.mlir  lower-mulberry-tensor-desc-unpack-lowering.mlir  (+62 more)
test/cherry/Driver/: driver-lowered-mlir.cherry  driver-mlir-jit.cherry  driver.cherry
test/cherry/Language/: argmax.cherry  backprop_loop_smoke.cherry  backprop_smoke.cherry  binop.cherry  block_scope.cherry  block_scope_error.cherry  block_shadow.cherry  bridge_cast.cherry  call.cherry  char_literal.cherry  collection_value_binding_codegen.cherry  comptime_generic_function.cherry  comptime_generic_return_type.cherry  comptime_generic_struct.cherry  comptime_local_type_alias.cherry  comptime_type_alias.cherry  comptime_type_alias_integer_param.cherry  comptime_type_alias_integer_param_nested.cherry  comptime_type_alias_integer_param_parse.cherry  comptime_type_alias_multi_param.cherry  comptime_type_alias_multi_param_method.cherry  comptime_type_alias_multi_param_parse.cherry  comptime_type_alias_tensor_storage.cherry  comptime_type_layout.cherry  const.cherry  const_assign_error.cherry  const_errors.cherry  const_large_list_global.cherry  const_list_alias_error.cherry  const_list_call_error.cherry  const_tensor_alias_error.cherry  const_tensor_call_error.cherry  dynamic_tensor.cherry  dynamic_tensor_argmax.cherry  dynamic_tensor_nn.cherry  dynamic_tensor_type_error.cherry  exp.cherry  extern_fn.cherry  feedforward_loop_mlir.cherry  file_api.cherry  (+128 more)
test/cherry/MLIRGen/: dump-mlir-opt.cherry  dump-mlir.cherry
test/cherry/Parse/: for.cherry
test/cherry/Plugin/: cherry-pass-plugin.mlir  cherry-plugin.mlir
test/cherry/Structs/: structs.cherry
test/mulberry/Builtins/: boolToUInt64.cherry  boolToUInt64.mulberry  operators.cherry  operators.mulberry  print.mulberry
test/mulberry/Driver/: driver-mlir-jit.mulberry  driver.mulberry
test/mulberry/Language/: array_element_type_error.mulberry  array_function_boundary.mulberry  array_heap_alloc_error.mulberry  array_nested.mulberry  array_pointer_error.mulberry  array_return.mulberry  array_struct_element.mulberry  array_struct_field_error.mulberry  array_struct_field_runtime.mulberry  array_type.mulberry  binop.mulberry  block_scope.mulberry  block_scope_error.mulberry  block_shadow.mulberry  call.mulberry  char_literal.mulberry  collection_value_binding_codegen.cherry  collection_value_binding_codegen.mulberry  comptime_generic_function.cherry  comptime_generic_return_type.mulberry  comptime_generic_struct.mulberry  comptime_local_type_alias.cherry  comptime_local_type_alias.mulberry  comptime_type_alias.cherry  comptime_type_alias.mulberry  comptime_type_alias_integer_param.cherry  comptime_type_alias_integer_param.mulberry  comptime_type_alias_integer_param_nested.mulberry  comptime_type_alias_integer_param_parse.mulberry  comptime_type_alias_multi_param.mulberry  comptime_type_alias_multi_param_method.cherry  const.cherry  (+182 more)
tools/driver/: CMakeLists.txt  driver.cpp
(+227 files in other folders)
